# sabre

./: .gitignore  .sconsign.dblite  CONTRIBUTORS.md  Makefile.am  Makefile.in  NEW_TODO  README.md  RunSabre  RunSabreSDL  SConstruct  cflags  configure  configure.in
dialogsrc/: Makefile.in
doc/: Makefile.in
gdev/: Makefile.in  fontdev.C  fontdev.h  fontedit.C  gdev-svgalib.C  gdev.C  gdev.h  hello.C
joystick/: Makefile.am  Makefile.in
lib/: Makefile.in
lib/fonts/: Makefile.in
lib/tzp/: Makefile.in
libzip/: Makefile.in  bits.c  comp.h  crc.c  deflate.c  inflate.c  inflate.h  mytypes.h  tailor.h  trees.c  unc.c  zip.h
scenarios/: Makefile.in  dogfight  furball  gru  gru2  gru3  melee  migjump  pistons  shoot1  shoot2  shoot3  takeoff  thunder  yakattak
sdlsrc/: Makefile.am  Makefile.in  input.C  kbdhit.C  vga_13.C
src/: Makefile.am  Makefile.in  SafeInt.h  aaaunit.C  aibase.C  aibase.h  aicomm.h  aiflite.C  aiflite.h  aigunner.C  aigunner.h  aimath.h  aipildef.h  aipilot.C  aipilot.h  aipilot2.C  aipilot3.C  aipilot4.C  aipilot5.C  aipilot6.C  bits.C  bits.h  brsnline.h  clip.C  clip.h  clstypes.h  cockpit.C  cockpit.h  colormap.C  colormap.h  colorspc.C  colorspc.h  comp.h  convpoly.C  convpoly.h  copoly.C  copoly.h  cpoly.C  cpoly.h  ddaline.h  (+155 more)
tools/: calibrate.C  fontedit.C  fontedit.h  fontutils.C  fontutils.h  hello.C  mkterrain.c  mktextr.c  mktextr3.c  rmptextr3.c
