## Process this file with automake to create Makefile.in

# This is part of Dan Hammer's SABRE Fighter Plane Simulator
# portions donated by Antti Barck
#
# Here are the top level make parameters
# 
# Special update distribution
AUTOMAKE_OPTIONS = foreign
SUBDIRS = lib libzip gdev src dialogsrc doc scenarios joystick
EXTRA_DIST = configure TROUBLE_SHOOTING WHATSNEW VERSION REQUIREMENTS RunSabre CONTRIBUTORS fly JOYSTICK.README cflags HISTORY flySDL RunSabreSDL sdlsrc/Makefile.in sdlsrc/Makefile.am sdlsrc/*.h sdlsrc/*.C sdlsrc/SDL_PORT_README sdlsrc/README



