dnl Process this file with autoconf to produce a configure script.

dnl This is part of Dan Hammer's SABRE Fighter Plane Simulator
dnl portions donated by Antti Barck
dnl
dnl Here are the top level configuration parameters

AC_INIT(Makefile.in)

dnl a quick hack for automake 2.12 to cope automake 1.2 
AUTOMAKE=automake
AUTOCONF=autoconf
AC_SUBST(AUTOMAKE)
AC_SUBST(AUTOCONF)

dnl initialize version and package information to keep automake happy
. VERSION
VERSION=$THE_VERSION
PACKAGE=$PACKAGE_NAME
REV_DATE=$THE_REV_DATE
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)
AC_SUBST(REV_DATE)
dnl echo version number to sources
AC_DEFINE_UNQUOTED(VERSION,"$VERSION")
AC_DEFINE_UNQUOTED(REV_DATE,"$REV_DATE")
AC_DEFINE(USING_NEWPILOT)

if test -f /usr/include/linux/joystick.h ;
 then
   AC_DEFINE(JSTICK_INSTALLED)
fi

 if test "$CFLAGS" = "";
 then
  AC_CANONICAL_HOST
  AC_MSG_CHECKING(choosing CFLAGS)
  cflaggedcflags=$(./cflags $host_cpu $host_os)
  AC_MSG_RESULT($cflaggedcflags)
 if test "$cflaggedcflags" != "(default)";
   then
    CFLAGS="$cflaggedcflags"
    CXXFLAGS="$cflaggedcflags"
  fi
 fi  

 if test -f /usr/include/joystick.h ;
 then
    AC_DEFINE_UNQUOTED(JSTICK_INSTALLED,"") 
 fi

dnl scan various programs
AC_ARG_PROGRAM
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl these libraries are really **needed** so dont pass on failure!

dnl the problem here is that these testes should be configure in source 
dnl subdirs that needs those libs
dnl unfortunately I have not succeeded to use AC_CONFIG_SUBDIRS with
dnl automake 1.2 / autoconf 2.12 combination :-(
dnl meanwhile we produce lots of unnecessary flags...

AC_CHECK_LIB(ncurses, main,,
 AC_MSG_ERROR(Cannot find Ncurses (-ncurses). please check out your system setup.))
AC_CHECK_LIB(vga, main, ,
   AC_MSG_ERROR(Cannot find SVGAlib (-lvga). please check out your system setup.))
AC_CHECK_LIB(vgagl, main, ,
   AC_MSG_ERROR(Cannot find SVGAlib (-lvgagl). please check out your system setup.))
AC_CHECK_LIB(m, main, ,
   AC_MSG_ERROR(Cannot find mathlib (-lm). please check out your system setup.))

dnl produce these file after configure
AC_OUTPUT(Makefile lib/Makefile lib/tzp/Makefile lib/fonts/Makefile libzip/Makefile gdev/Makefile src/Makefile dialogsrc/Makefile doc/Makefile scenarios/Makefile sdlsrc/Makefile joystick/Makefile)
















